Alife new twitter
Alife new twitter

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -11200,7 +11200,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11329,11 +11329,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4hAdHVJjSmth
-								nv6kGVQ+1g==
+								sbN1CTzc4JES
+								iGuiIHgx2g==
 								</data>
 								<key>Size</key>
-								<integer>85678</integer>
+								<integer>85738</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11346,7 +11346,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11425,8 +11425,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dFRd21SxS+1s
-								X/+IVOUCuQ==
+								WqaqLmWANbOT
+								1+svcMCMiQ==
 								</data>
 								<key>Size</key>
 								<integer>153582</integer>
@@ -11445,11 +11445,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1BxBmvBgy89z
-								v88ITh2Eng==
+								68c3JhTMHdzM
+								iCxMHVrqWA==
 								</data>
 								<key>Size</key>
-								<integer>69551</integer>
+								<integer>69611</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12854,7 +12854,7 @@
 					<key>page72 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12923,8 +12923,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ci/FeQ9qPHL7
-								RpFV0pZxYw==
+								UX/y9dHtEZzr
+								zkHWexmiYg==
 								</data>
 								<key>Size</key>
 								<integer>120168</integer>
@@ -12943,11 +12943,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LQ6B4tjT/efi
-								DGj98i1lNQ==
+								ONQ4S2VL+D5M
+								XcKXWeFYDA==
 								</data>
 								<key>Size</key>
-								<integer>51401</integer>
+								<integer>51421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13152,7 +13152,7 @@
 					<key>page75 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13231,8 +13231,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ksxnVyvhdk4r
-								+txPnnAuIg==
+								BhykCZdNbmbi
+								yp9F9F19Dw==
 								</data>
 								<key>Size</key>
 								<integer>136936</integer>
@@ -13251,11 +13251,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XWo3ls2JxnVR
-								n9IkHSSmAA==
+								QjJwmN8HSGPA
+								6S4Jq7RXcA==
 								</data>
 								<key>Size</key>
-								<integer>60876</integer>
+								<integer>60896</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13268,7 +13268,7 @@
 					<key>page76 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13337,8 +13337,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wj0i9LOGYqP0
-								/RG2STXbgw==
+								aXgB+oGheaLz
+								cyEWipEbwA==
 								</data>
 								<key>Size</key>
 								<integer>120755</integer>
@@ -13357,11 +13357,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w6Qe1zUkMIVT
-								ATGT5mNJdw==
+								bUbz+nqCz2tr
+								WWQqCOw2mg==
 								</data>
 								<key>Size</key>
-								<integer>51786</integer>
+								<integer>51807</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13374,7 +13374,7 @@
 					<key>page77 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13433,8 +13433,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KhmKR737V1oL
-								rdBKfGIdzQ==
+								HvLajRs2VCcz
+								u5xNfXwaHA==
 								</data>
 								<key>Size</key>
 								<integer>122885</integer>
@@ -13453,11 +13453,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9UzxcKxh9sHA
-								NQk8giWKOQ==
+								kVZihaK4BkJK
+								ueA/F81nsw==
 								</data>
 								<key>Size</key>
-								<integer>51450</integer>
+								<integer>51470</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13470,7 +13470,7 @@
 					<key>page78 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13529,8 +13529,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tDDuWwYuEX1q
-								OAD9Cc5w2g==
+								AIQtld6rYtZy
+								kg3TLY9WQw==
 								</data>
 								<key>Size</key>
 								<integer>116531</integer>
@@ -13549,11 +13549,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nnPQBydyJY38
-								1tbVJD1YGw==
+								AvkVq8LVCL6B
+								RGMeOrG9WQ==
 								</data>
 								<key>Size</key>
-								<integer>49815</integer>
+								<integer>49835</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13566,7 +13566,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13665,8 +13665,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lE2q8Jjx8qam
-								mGXDwNe4xg==
+								V26WvS5o376f
+								rj4cS4nTmg==
 								</data>
 								<key>Size</key>
 								<integer>139069</integer>
@@ -13685,11 +13685,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/n5wgqy5Ehdj
-								N1QOZias2A==
+								JB1x3YAufXHa
+								6BluYXK/+g==
 								</data>
 								<key>Size</key>
-								<integer>68889</integer>
+								<integer>68910</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13924,7 +13924,7 @@
 					<key>page81 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13993,8 +13993,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PZd0630mEAgh
-								gypM53Gwww==
+								R1NpHqcUNXwC
+								yfqZHTBoww==
 								</data>
 								<key>Size</key>
 								<integer>116321</integer>
@@ -14013,11 +14013,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qzHR4JFAKHst
-								lOydWfAOIA==
+								M5yyxOM04VOi
+								U9evaHQSMg==
 								</data>
 								<key>Size</key>
-								<integer>49017</integer>
+								<integer>49037</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14030,7 +14030,7 @@
 					<key>page82 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14099,8 +14099,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5beUvu6clYvW
-								dlJ5WMNIxA==
+								oV6zJanA2vnD
+								t5RRHyuxdg==
 								</data>
 								<key>Size</key>
 								<integer>116321</integer>
@@ -14119,11 +14119,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AOFa6P0mBLSN
-								XqrCNjMomQ==
+								M6ChL7RMTpWx
+								Uv4avnNAsg==
 								</data>
 								<key>Size</key>
-								<integer>49035</integer>
+								<integer>49055</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15344,7 +15344,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-23T19:07:06Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16423,11 +16423,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pl0ILC9RdKqG
-								BtvpKlOCwA==
+								eue9EuPaJyud
+								JtDM9dvvdw==
 								</data>
 								<key>Size</key>
-								<integer>3830</integer>
+								<integer>3904</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16581,7 +16581,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFzyS5V2gaADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcF3CoWcZeCADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16591,14 +16591,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwXPJLlXa
-				toAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwXcKhZxm
+				y4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBc8kuVdrg
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBdwqFnGcf
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16608,7 +16608,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBc8kuVdsKgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBdwqFnGdagAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16618,7 +16618,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBc8kuVds0gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBdwqFnGeMgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
