--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,8 +114,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ksxnVyvhdk4r
-								+txPnnAuIg==
+								BhykCZdNbmbi
+								yp9F9F19Dw==
 								</data>
 								<key>Size</key>
 								<integer>136936</integer>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XWo3ls2JxnVR
-								n9IkHSSmAA==
+								QjJwmN8HSGPA
+								6S4Jq7RXcA==
 								</data>
 								<key>Size</key>
-								<integer>60876</integer>
+								<integer>60896</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
