--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ci/FeQ9qPHL7
-								RpFV0pZxYw==
+								UX/y9dHtEZzr
+								zkHWexmiYg==
 								</data>
 								<key>Size</key>
 								<integer>120168</integer>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LQ6B4tjT/efi
-								DGj98i1lNQ==
+								ONQ4S2VL+D5M
+								XcKXWeFYDA==
 								</data>
 								<key>Size</key>
-								<integer>51401</integer>
+								<integer>51421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
