--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PZd0630mEAgh
-								gypM53Gwww==
+								R1NpHqcUNXwC
+								yfqZHTBoww==
 								</data>
 								<key>Size</key>
 								<integer>116321</integer>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qzHR4JFAKHst
-								lOydWfAOIA==
+								M5yyxOM04VOi
+								U9evaHQSMg==
 								</data>
 								<key>Size</key>
-								<integer>49017</integer>
+								<integer>49037</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
