--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wj0i9LOGYqP0
-								/RG2STXbgw==
+								aXgB+oGheaLz
+								cyEWipEbwA==
 								</data>
 								<key>Size</key>
 								<integer>120755</integer>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w6Qe1zUkMIVT
-								ATGT5mNJdw==
+								bUbz+nqCz2tr
+								WWQqCOw2mg==
 								</data>
 								<key>Size</key>
-								<integer>51786</integer>
+								<integer>51807</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
