--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KhmKR737V1oL
-								rdBKfGIdzQ==
+								HvLajRs2VCcz
+								u5xNfXwaHA==
 								</data>
 								<key>Size</key>
 								<integer>122885</integer>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9UzxcKxh9sHA
-								NQk8giWKOQ==
+								kVZihaK4BkJK
+								ueA/F81nsw==
 								</data>
 								<key>Size</key>
-								<integer>51450</integer>
+								<integer>51470</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
