--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,8 +134,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lE2q8Jjx8qam
-								mGXDwNe4xg==
+								V26WvS5o376f
+								rj4cS4nTmg==
 								</data>
 								<key>Size</key>
 								<integer>139069</integer>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/n5wgqy5Ehdj
-								N1QOZias2A==
+								JB1x3YAufXHa
+								6BluYXK/+g==
 								</data>
 								<key>Size</key>
-								<integer>68889</integer>
+								<integer>68910</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
