--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,8 +114,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dFRd21SxS+1s
-								X/+IVOUCuQ==
+								WqaqLmWANbOT
+								1+svcMCMiQ==
 								</data>
 								<key>Size</key>
 								<integer>153582</integer>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1BxBmvBgy89z
-								v88ITh2Eng==
+								68c3JhTMHdzM
+								iCxMHVrqWA==
 								</data>
 								<key>Size</key>
-								<integer>69551</integer>
+								<integer>69611</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
