--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-28T17:37:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tDDuWwYuEX1q
-								OAD9Cc5w2g==
+								AIQtld6rYtZy
+								kg3TLY9WQw==
 								</data>
 								<key>Size</key>
 								<integer>116531</integer>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nnPQBydyJY38
-								1tbVJD1YGw==
+								AvkVq8LVCL6B
+								RGMeOrG9WQ==
 								</data>
 								<key>Size</key>
-								<integer>49815</integer>
+								<integer>49835</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
