--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-28T17:37:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4hAdHVJjSmth
-								nv6kGVQ+1g==
+								sbN1CTzc4JES
+								iGuiIHgx2g==
 								</data>
 								<key>Size</key>
-								<integer>85678</integer>
+								<integer>85738</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
