ALife lodging and location
ALife lodging and location

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:59Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -80,15 +80,15 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
-							<key>files/stacks-image-251a1c1.jpg</key>
+							<key>files/stacks-image-e391cfd-650x188.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								psdcd6dUm5vV
-								6eW4nx0vyA==
+								fIVhURqrHBXl
+								HA6uwnKrpg==
 								</data>
 								<key>Size</key>
-								<integer>13028</integer>
+								<integer>50556</integer>
 							</dict>
 							<key>files/stacks-image-e85c4e3.jpg</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WqaqLmWANbOT
-								1+svcMCMiQ==
+								4WR1491YESMo
+								Rz/1Z4f7iA==
 								</data>
 								<key>Size</key>
-								<integer>153582</integer>
+								<integer>154331</integer>
 							</dict>
 							<key>files/stacks_page_page65.js</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								68c3JhTMHdzM
-								iCxMHVrqWA==
+								giYP4JdQHPAO
+								uDVXeIeA4A==
 								</data>
 								<key>Size</key>
-								<integer>69611</integer>
+								<integer>74204</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
