--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:59Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BhykCZdNbmbi
-								yp9F9F19Dw==
+								rcgR4OFPvkw9
+								znAsjpqONg==
 								</data>
 								<key>Size</key>
-								<integer>136936</integer>
+								<integer>136939</integer>
 							</dict>
 							<key>files/stacks_page_page75.js</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QjJwmN8HSGPA
-								6S4Jq7RXcA==
+								ZxLfl7o3izYU
+								K2/KvmgiCA==
 								</data>
 								<key>Size</key>
-								<integer>60896</integer>
+								<integer>61039</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
