--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -11200,7 +11200,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:59Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11245,16 +11245,6 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
-							<key>files/stacks-image-251a1c1.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								psdcd6dUm5vV
-								6eW4nx0vyA==
-								</data>
-								<key>Size</key>
-								<integer>13028</integer>
-							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -11295,6 +11285,16 @@
 								<key>Size</key>
 								<integer>27178</integer>
 							</dict>
+							<key>files/stacks-image-e391cfd-650x188.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fIVhURqrHBXl
+								HA6uwnKrpg==
+								</data>
+								<key>Size</key>
+								<integer>50556</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -11309,11 +11309,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ksibq7tIxOaO
-								iC4TA6WdtQ==
+								W95PEBYbeE6Y
+								v4HsBSkwDA==
 								</data>
 								<key>Size</key>
-								<integer>155304</integer>
+								<integer>155307</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -11329,11 +11329,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sbN1CTzc4JES
-								iGuiIHgx2g==
+								W7bHq0NzAadA
+								Ij4yW1UJkw==
 								</data>
 								<key>Size</key>
-								<integer>85738</integer>
+								<integer>86073</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11346,7 +11346,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:59Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11391,15 +11391,15 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
-							<key>files/stacks-image-251a1c1.jpg</key>
+							<key>files/stacks-image-e391cfd-650x188.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								psdcd6dUm5vV
-								6eW4nx0vyA==
+								fIVhURqrHBXl
+								HA6uwnKrpg==
 								</data>
 								<key>Size</key>
-								<integer>13028</integer>
+								<integer>50556</integer>
 							</dict>
 							<key>files/stacks-image-e85c4e3.jpg</key>
 							<dict>
@@ -11425,11 +11425,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WqaqLmWANbOT
-								1+svcMCMiQ==
+								4WR1491YESMo
+								Rz/1Z4f7iA==
 								</data>
 								<key>Size</key>
-								<integer>153582</integer>
+								<integer>154331</integer>
 							</dict>
 							<key>files/stacks_page_page65.js</key>
 							<dict>
@@ -11445,11 +11445,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								68c3JhTMHdzM
-								iCxMHVrqWA==
+								giYP4JdQHPAO
+								uDVXeIeA4A==
 								</data>
 								<key>Size</key>
-								<integer>69611</integer>
+								<integer>74204</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13152,7 +13152,7 @@
 					<key>page75 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:59Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13231,11 +13231,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BhykCZdNbmbi
-								yp9F9F19Dw==
+								rcgR4OFPvkw9
+								znAsjpqONg==
 								</data>
 								<key>Size</key>
-								<integer>136936</integer>
+								<integer>136939</integer>
 							</dict>
 							<key>files/stacks_page_page75.js</key>
 							<dict>
@@ -13251,11 +13251,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QjJwmN8HSGPA
-								6S4Jq7RXcA==
+								ZxLfl7o3izYU
+								K2/KvmgiCA==
 								</data>
 								<key>Size</key>
-								<integer>60896</integer>
+								<integer>61039</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15344,7 +15344,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-28T17:37:58Z</date>
+						<date>2019-07-31T11:24:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16423,11 +16423,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eue9EuPaJyud
-								JtDM9dvvdw==
+								95/tfcWftDo5
+								HeX5+5xTnA==
 								</data>
 								<key>Size</key>
-								<integer>3904</integer>
+								<integer>3830</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16581,7 +16581,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcF3CoWcZeCADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcF42PpMxTOADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16591,14 +16591,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwXcKhZxm
-				y4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwXjY+kzF
+				yoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBdwqFnGcf
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBeNj6TMX8
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16608,7 +16608,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBdwqFnGdagAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBeNj6TMYegAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16618,7 +16618,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBdwqFnGeMgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBeNj6TMY/gAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
