small update on home page openings
small update on home page openings

--- a/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-31T11:40:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								I8NCQQpSNpJH
-								qqtxhPSK/g==
+								fB8yhq7pqWCb
+								mHv0xCYFrw==
 								</data>
 								<key>Size</key>
-								<integer>87232</integer>
+								<integer>87255</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
