alife browser title change
alife browser title change

--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -10,7 +10,7 @@
 		<string>page76</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -19,7 +19,7 @@
 	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page1</string>
+		<string>page64</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
