--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -10,7 +10,7 @@
 			<key>Dictionary</key>
 			<dict>
 				<key>BrowserTitle</key>
-				<string>ALIIFE 2020</string>
+				<string>ALIFE 2020</string>
 				<key>CreatedDate</key>
 				<date>2016-02-08T13:45:29Z</date>
 				<key>ID</key>
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-31T11:24:25Z</date>
+						<date>2019-08-01T18:09:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								W7bHq0NzAadA
-								Ij4yW1UJkw==
+								jnkxCYM/Fgdt
+								g7DgmJf0Fg==
 								</data>
 								<key>Size</key>
-								<integer>86073</integer>
+								<integer>86223</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
