CSE Summit Agenda
CSE Summit Agenda

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-12T12:11:38Z</date>
+						<date>2019-08-12T14:09:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N57K/virEOC5
-								wy/0vQr4Dw==
+								OFcnJ+7UD2e5
+								7HSxDDEXvA==
 								</data>
 								<key>Size</key>
-								<integer>109995</integer>
+								<integer>110730</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mgnAqg3tzbVc
-								5JIGYhEgIA==
+								Vt2VEzJ0ViYD
+								DNfWDBMveA==
 								</data>
 								<key>Size</key>
-								<integer>55466</integer>
+								<integer>55801</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
