--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -14894,7 +14894,7 @@
 					<key>page86 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-12T14:09:36Z</date>
+						<date>2019-08-13T16:25:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14973,11 +14973,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -15003,11 +15003,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OFcnJ+7UD2e5
-								7HSxDDEXvA==
+								/pLfuXhQ6v+D
+								bxCXusyDTQ==
 								</data>
 								<key>Size</key>
-								<integer>110730</integer>
+								<integer>111358</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
@@ -15023,11 +15023,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Vt2VEzJ0ViYD
-								DNfWDBMveA==
+								pD8vhgsVahAw
+								p2P4w+YUTg==
 								</data>
 								<key>Size</key>
-								<integer>55801</integer>
+								<integer>56415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15344,7 +15344,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-12T14:09:36Z</date>
+						<date>2019-08-13T16:25:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16423,8 +16423,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i6ubU9nQgOCa
-								SjQs4Ix9xA==
+								6PzEGGPH2vax
+								KolQi+y5bw==
 								</data>
 								<key>Size</key>
 								<integer>3830</integer>
@@ -16581,7 +16581,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGA1VEwVIuADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGBjfgdiIeADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16591,14 +16591,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYDVUTBV
-				GYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYGN+B2J
+				HoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBgNVRMFVM
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBgY34HYlh
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16608,7 +16608,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBgNVRMFVtgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBgY34HYmUgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16618,7 +16618,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBgNVRMFWPgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBgY34HYnGgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
