--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-12T14:09:36Z</date>
+						<date>2019-08-13T16:25:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OFcnJ+7UD2e5
-								7HSxDDEXvA==
+								/pLfuXhQ6v+D
+								bxCXusyDTQ==
 								</data>
 								<key>Size</key>
-								<integer>110730</integer>
+								<integer>111358</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Vt2VEzJ0ViYD
-								DNfWDBMveA==
+								pD8vhgsVahAw
+								p2P4w+YUTg==
 								</data>
 								<key>Size</key>
-								<integer>55801</integer>
+								<integer>56415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
