--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6400,7 +6400,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-08-15T17:30:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6829,11 +6829,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2bseI1nJOeOJ
-								vPdDAjmT3w==
+								eDXqs8emGwc/
+								6Gt4qbY+uw==
 								</data>
 								<key>Size</key>
-								<integer>196441</integer>
+								<integer>196335</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6849,11 +6849,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								81mGeUlh7dDR
-								lh95dwXXxQ==
+								W+MZ5IbgVOlV
+								or47OOiKtw==
 								</data>
 								<key>Size</key>
-								<integer>152873</integer>
+								<integer>153187</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15242,7 +15242,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T21:25:59Z</date>
+						<date>2019-08-15T17:30:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15271,11 +15271,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kActvRpspxnk
-								WtR47MRH0g==
+								F8O8wkmb0Spp
+								5JV4s2dYug==
 								</data>
 								<key>Size</key>
-								<integer>5733</integer>
+								<integer>5765</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15354,7 +15354,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-14T13:56:43Z</date>
+						<date>2019-08-15T17:30:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16433,11 +16433,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZlMfbqOUJSUA
-								FZfG1YnZqA==
+								X96ATbzlOWrF
+								1xcRrJ2TDw==
 								</data>
 								<key>Size</key>
-								<integer>3830</integer>
+								<integer>4681</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16591,7 +16591,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGCJU62EOCADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGC5yimbkyADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16601,14 +16601,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYIlTrYR
-				gIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYLnKKal
+				pIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBgiVOthGp
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBgucopqcv
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16618,7 +16618,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBgiVOthHLgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBgucopqe1gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16628,7 +16628,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBgiVOthHtgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBgucopqfwgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
