--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-08-15T17:30:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2bseI1nJOeOJ
-								vPdDAjmT3w==
+								eDXqs8emGwc/
+								6Gt4qbY+uw==
 								</data>
 								<key>Size</key>
-								<integer>196441</integer>
+								<integer>196335</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								81mGeUlh7dDR
-								lh95dwXXxQ==
+								W+MZ5IbgVOlV
+								or47OOiKtw==
 								</data>
 								<key>Size</key>
-								<integer>152873</integer>
+								<integer>153187</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
